# MeshroomMaya

./: .clang-format  .gitignore  .gitmodules  .travis.yml  Makefile  README.md  configure  format_all_files.sh
src/: CMakeLists.txt
src/mayaMVG/: CMakeLists.txt  README.md  plugin.cpp  version.hpp
src/mayaMVG/cmd/: MVGCmd.cpp  MVGCmd.h
src/mayaMVG/context/: MVGContext.cpp  MVGContext.h  MVGContextCmd.cpp  MVGContextCmd.h  MVGManipContainer.cpp  MVGManipContainer.h
src/mayaMVG/core/: MVGCamera.cpp  MVGCamera.h  MVGCamera.hpp  MVGEigen.hpp  MVGGeometryUtil.cpp  MVGGeometryUtil.h  MVGGeometryUtil.hpp  MVGLineConstrainedPlaneKernel.cpp  MVGLineConstrainedPlaneKernel.hpp  MVGLog.h  MVGLog.hpp  MVGMesh.cpp  MVGMesh.h  MVGMesh.hpp  MVGMeshItem.cpp  MVGMeshItem.h  MVGNodeWrapper.cpp  MVGNodeWrapper.h  MVGNodeWrapper.hpp  MVGPlaneKernel.cpp  MVGPlaneKernel.hpp  MVGPointCloud.cpp  MVGPointCloud.h  MVGPointCloud.hpp  MVGPointCloudItem.cpp  MVGPointCloudItem.h  MVGProject.cpp  MVGProject.h  MVGProject.hpp  MVGScene.cpp  MVGScene.h
src/mayaMVG/core/geometry/: CMakeLists.txt  nView2DpointTo3D.hpp  plane_kernel.hpp
src/mayaMVG/geometry/: nView2DpointTo3D_test.cpp  oneView2DpolygonTo3D.hpp  oneView2DpolygonTo3D_test.cpp
src/mayaMVG/io/: MVGCameraReader.cpp  MVGCameraReader.h  MVGPointCloudReader.cpp  MVGPointCloudReader.h  Ply.cpp  Ply.hpp  cameraIO.h  cameraIO.hpp  cameraReaderMVG.hpp  cameraReaderMVG_test.cpp  pointCloudIO.h  pointCloudIO.hpp  pointCloudReaderMVG.hpp  pointCloudReaderMVG_test.cpp
src/mayaMVG/maya/: MVGCameraPointsLocator.cpp  MVGCameraPointsLocator.hpp  MVGDummyLocator.cpp  MVGMayaCallbacks.h  MVGMayaCallbacks.hpp  MVGMayaUtil.cpp  MVGMayaUtil.h  MVGMayaUtil.hpp  plugin.cpp
src/mayaMVG/maya/cmd/: MVGCmd.cpp  MVGCmd.h  MVGEditCmd.cpp  MVGEditCmd.h  MVGEditCmd.hpp  MVGImagePlaneCmd.cpp  MVGImagePlaneCmd.hpp  MVGPolyModifierCmd.cpp  MVGPolyModifierCmd.hpp  MVGSelectClosestCamCmd.cpp  MVGSelectClosestCamCmd.hpp
src/mayaMVG/maya/context/: MVGBuildFaceManipulator.cpp  MVGBuildFaceManipulator.h  MVGContext.cpp  MVGContext.h  MVGContext.hpp  MVGContextCmd.cpp  MVGContextCmd.h  MVGContextCmd.hpp  MVGCreateManipulator.cpp  MVGCreateManipulator.h  MVGCreateManipulator.hpp  MVGCreateManipulatorDrawOverride.cpp  MVGCreateManipulatorDrawOverride.hpp  MVGDrawUtil.cpp  MVGDrawUtil.h  MVGDrawUtil.hpp  MVGLocatorManipulator.cpp  MVGLocatorManipulator.hpp  MVGManipContainer.cpp  MVGManipulator.cpp  MVGManipulator.hpp  MVGManipulatorCache.cpp  MVGManipulatorCache.hpp  MVGManipulatorKeyEventFilter.cpp  MVGManipulatorKeyEventFilter.h  MVGManipulatorUtil.cpp  MVGManipulatorUtil.h  MVGManipulatorUtil.hpp  MVGMoveManipulator.cpp  MVGMoveManipulator.h  MVGMoveManipulator.hpp  MVGMoveManipulatorDrawOverride.cpp  MVGMoveManipulatorDrawOverride.hpp
src/mayaMVG/maya/mesh/: MVGMeshEditFactory.cpp  MVGMeshEditFactory.hpp  MVGMeshEditNode.cpp  MVGMeshEditNode.hpp
src/mayaMVG/maya/scripts/: mayaMVGCreateUI.mel  mayaMVGToolProperties.mel  mayaMVGToolValues.mel
src/mayaMVG/patterns/: Singleton.h
src/mayaMVG/qt/: MVGCameraSetWrapper.cpp  MVGCameraSetWrapper.hpp  MVGCameraWrapper.cpp  MVGCameraWrapper.h  MVGCameraWrapper.hpp  MVGEventFilter.cpp  MVGEventFilter.h  MVGEventFilter.hpp  MVGMainWidget.cpp  MVGMainWidget.h  MVGMainWidget.hpp  MVGMayaEvent.cpp  MVGMayaEvent.h  MVGMayaViewportEvent.cpp  MVGMayaViewportEvent.h  MVGMenu.cpp  MVGMenu.h  MVGMenuItem.cpp  MVGMenuItem.h  MVGMeshWrapper.cpp  MVGMeshWrapper.hpp  MVGPanelWrapper.cpp  MVGPanelWrapper.h  MVGPanelWrapper.hpp  MVGProjectWrapper.cpp  MVGProjectWrapper.h  MVGProjectWrapper.hpp  MVGQt.h  MVGQt.hpp  MVGUserLog.h  MVGUserLog.hpp  MVGViewportEventFilter.cpp  MVGViewportEventFilter.h  MVGWindowEventFilter.cpp  MVGWindowEventFilter.h  QObjectListModel.cpp  QObjectListModel.h  QObjectListModel.hpp  QWheelArea.h  QWheelArea.hpp  (+3 more)
src/mayaMVG/qt/qml/: BrowseDirectory.qml  CamSetCreationDialog.qml  CameraItem.qml  CameraList.qml  CameraListView.qml  CameraList_old.qml  CameraModel.qml  CameraSettings.qml  CameraThumbnail.qml  Context.qml  ContextBar.qml  CustomImage.qml  CustomImage2.qml  CustomListView.qml  LogText.qml  MCheckBox.qml  MDialog.qml  MRadioButton.qml  MSettingsEntry.qml  MTextField.qml  MVGList.qml  MVGPanel.qml  MeshItem.qml  MeshListView.qml  Params.qml  PointCloudItem.qml  ProjectSettings.qml  ScrollIndicator.qml  Stack.qml  TextBox.qml  TopFocusHandler.qml  main.qml
src/mayaMVG/qt/ui/: menu.ui  menuItem.ui
src/mayaMVG/readerMVG/: cameraReaderMVG.hpp  pointCloudReaderMVG.hpp
src/mayaMVG/util/: MVGLog.h  MVGUtil.cpp  MVGUtil.h
src/meshroomMaya/: CMakeLists.txt  version.hpp
src/meshroomMaya/core/: MVGCamera.cpp  MVGCamera.hpp  MVGEigen.hpp  MVGGeometryUtil.cpp  MVGGeometryUtil.hpp  MVGLineConstrainedPlaneKernel.cpp  MVGLineConstrainedPlaneKernel.hpp  MVGLog.hpp  MVGMesh.cpp  MVGMesh.hpp  MVGNodeWrapper.cpp  MVGNodeWrapper.hpp  MVGPlaneKernel.cpp  MVGPlaneKernel.hpp  MVGPointCloud.cpp  MVGPointCloud.hpp  MVGPointCloudItem.cpp  MVGPointCloudItem.hpp  MVGProject.cpp  MVGProject.hpp
src/meshroomMaya/maya/: MVGCameraPointsLocator.cpp  MVGCameraPointsLocator.hpp  MVGDummyLocator.h  MVGMayaCallbacks.hpp  MVGMayaUtil.cpp  MVGMayaUtil.hpp  plugin.cpp
src/meshroomMaya/maya/cmd/: MVGCmd.cpp  MVGCmd.hpp  MVGEditCmd.cpp  MVGEditCmd.hpp  MVGImagePlaneCmd.cpp  MVGImagePlaneCmd.hpp  MVGPolyModifierCmd.cpp  MVGPolyModifierCmd.hpp  MVGSelectClosestCamCmd.cpp  MVGSelectClosestCamCmd.hpp
src/meshroomMaya/maya/context/: MVGContext.cpp  MVGContext.hpp  MVGContextCmd.cpp  MVGContextCmd.hpp  MVGCreateManipulator.cpp  MVGCreateManipulator.hpp  MVGCreateManipulatorDrawOverride.cpp  MVGCreateManipulatorDrawOverride.hpp  MVGDrawUtil.cpp  MVGDrawUtil.hpp  (+10 more)
src/meshroomMaya/qt/: MVGCameraSetWrapper.cpp  MVGCameraSetWrapper.hpp  MVGCameraWrapper.cpp  MVGCameraWrapper.hpp  MVGEventFilter.hpp  MVGMainWidget.cpp  MVGMainWidget.hpp  MVGMeshWrapper.cpp  MVGMeshWrapper.hpp  MVGPanelWrapper.cpp  MVGPanelWrapper.hpp  MVGProjectWrapper.cpp  MVGProjectWrapper.hpp  MVGQt.hpp  MVGUserLog.hpp  QmlInstantCoding.cpp  QmlInstantCoding.hpp
(+35 files in other folders)
